# tsong

./: COPYING  COPYING.md  Cargo.toml  README.md  build.rs
src/: alsa.rs  alsalog.c  bufring.rs  config.rs  db.rs  errors.rs  fflog.c  ffmpeg.rs  generation.rs  logical.rs  main.rs  physical.rs  playback.rs  playlist.rs  playlist_lib.lua  playlist_stub.lua  prefs.rs  reference.rs  scan.rs
src/lua/: default_import.lua  import.lua.example  importlib.lua  playlist_lib.lua
src/remote/: mod.rs  mpris.rs
src/sql/: schema.sql  update_1_to_2.sql  update_2_to_3.sql
src/ui/: mod.rs
src/ui/gtk/: css.css  edit.rs  errors_window.rs  icons.rs  mod.rs  playlist_edit.rs  rebuild_resources.sh  scrp.rs  settings.rs  tsong.gresource  tsong.xml
