[package]
name = "tsong"
version = "0.1.0"
authors = ["Solra Bizna <solra@bizna.name>"]
edition = "2018"
license = "MIT"

[dependencies]
arrayref = "0.3.6"
gtk = {version = "0.9.0", features = ["v3_16"]}
gio = {version = "", features = ["v2_44"]}
glib = ""
gdk = ""
ffmpeg-dev = "0.3.8"
mlua = {version = "0.4.2", features = ["lua54", "vendored"]}
lazy_static = "1.4"
anyhow = "1.0"
lsx = {version = "1.1", default-features = false, features = ["sha256"]}
libc = ""
portaudio = "0.7"
rand = "0.8"
rusqlite = "0.24.2"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
